Fix bug with alignment cancel-link in loginform

--- a/css/login.css
+++ b/css/login.css
@@ -51,8 +51,7 @@
 }
 
 .cyclos-form-box #cyclos-forgot-cancel {
-	display: inline-block;
-	float: right;
+	text-align: right;
 }
 
 .cyclos-form-box input:focus,
